3.0.0-rc3
- file upload check and error reporting was enhanced
- a bug with file download within a non-ajax environment was solved
- Zend Framework was updated to 1.5.2

3.0.0-rc2
- a bug with P4A_Field::getAsCheckbox() method was solved
- when a P4A_Field's value is coming from a POST,
  P4A::main() now checks if the field is enabled
- translations were synched

3.0.0-rc1
- saveUploads() method was moved from P4A_Mask to P4A_Data_Source
- P4A_DB::quote() method's 2nd param "autoquote" is now false by default,
  solving some problems with P4A_Data_Field::getSQLValue() and getSQLNewValue()
- when P4A_DB_Source needs a quoted value now it uses P4A_DB->quote() with
  autoquote turned on
- P4A_DB::quote() method, if autoquote param is on, always encloses the value
  within single quotes
- jQuery::form was updated to 2.0.8
- jQuery::iFixPNG was updated to 2.1
- P4A_Menu's CSS were changed a bit solving a bug with IE6 (too fast hide)
- P4A_DB_Navigator movements were disabled (due to the unavailable jQuery UI release)
  thus now all allowMovements methods trigger errors

2.99.9
- a bug with P4A_Field::getAsRadio() was solved (labels can be clicked now)
- P4A_Rmdir_Recursive() global function was added
- P4A_Data_Field::setSequence() method does not add the "_seq" postfix anymore
- P4A_DB::nextSequenceId() method adds the "_seq" postfix depending on the db you're using
- SQL dump for PostgreSQL was added to products_catalogue sample
- products_catalogue' SQL dump for MySQL was renamed to db_dump_mysql.sql
- P4A_Quote_SQL_Value() global function was removed
- P4A_DB::quote() method was added (it's a wrapper for Zend_DB quote method)
- P4A_DB::get*(), fetch*(), query*() methods now support the binding params array
- P4A_ROOT_PATH autodetection rules were changed a bit for Windows server compatibility
- P4A_Strip_Double_Backslashes() global function was added
- P4A_UPLOADS_DIR autodetection rules were changed a bit for Windows server compatibility