@@ -2,6 +2,8 @@
 - file upload check and error reporting was enhanced
 - a bug with file download within a non-ajax environment was solved
 - Zend Framework was updated to 1.5.2
+- P4A_Redirect_To_File() global function now checks if the file really
+  exists within P4A_UPLOADS_DIR, otherwise throws a P4A_Exception
 
 3.0.0-rc2
 - a bug with P4A_Field::getAsCheckbox() method was solved
